uis/layover/src/main/js/app/css/aprox.css
/* brought in from monorail UI */
body{
  font-family: sans-serif;
}

.product-name, .navbar-content{
  font-variant: small-caps;
}

.product-name{
  margin-right: 10px;
  font-size: 32pt;
  font-family: serif;
  display: inline;
}

.menu {
  list-style: none;
  border-bottom: 1px solid #333;
  /*margin-bottom: 2em;*/
  padding-top: 30px;
  padding-bottom: 5px;
}

.menu > li {
  display: inline;
  padding: 5px;
  margin: 0px;
  margin-left: -6px;
}

.menu a.button{
  text-decoration: none;
}

.vdiv{
  border-left: 1px solid black;
  min-width: 2px;
  content: " ";
  display: inline;
  margin-left: 5px;
  margin-right: 5px;
}

.button:hover,
.cp-button:hover,
.nav-button:hover{
  color: blue;
}

.del-button:hover{
  color: red !important;
}

a.button{
  padding: 4px;
  margin-left: 0px;
  margin-right: 0px;
  background: white;
}

a {
  color: #333;
}

header{
  margin-top: 5px;
  padding: 5px;
  padding-left: 10px;
  margin-bottom: 10px;
}

.left{
  float: left;
}

.right{
  float: right;
}

.store-listing{
  min-width: 80%;
  margin-right: 50px;
  border-collapse: separate;
}

.listing-item-end td{
  padding-bottom: 10px;
}

table{
  border: 1px solid #ddd;
}

tr:nth-child(odd){
  background: #ffe;
}
tr:nth-child(even){
  background: #eee;
}

th{
  border: 1px solid #ddd;
  border-top: none;
  padding: 5px;
  padding-bottom: 2px;
}

td{
  padding: 5px 5px 2px 5px;
}

.control-panel{
  border-left: 1px solid #ddd;
  border-bottom: 1px solid #ddd;
  float: right;
  min-width: 15%;
  margin: 0px;
  margin-top: 0px;
  padding-left: 1%;
}

.content-panel{
  display: block;
  margin-top: 10px;
  margin-left: 20px;
  margin-right: 15%;
  min-width: 60%;
}

footer{
  border-top: 1px solid #ddd;
  padding: 5px;
  margin-top: 20px;
}

.cp-row{
  margin-bottom: 10px;
}

.cp-col{
	display: inline-block;
}

.inline{
  display: inline;
}

.inline-cp{
  visibility: hidden;
  display: inline;
  font-weight: bold;
  margin-left: 5px;
  border-left: 1px solid #333;
  padding-left: 5px;
}

.inline-cp-action{
  padding-left: 5px;
  text-decoration: none;
}

.surround-cp-action{
  text-decoration: none;
}

.surround-cp-action:hover{
  text-decoration: underline;
}

.key{
  font-weight: bold;
  font-family: sans-serif;
}

.constituent:hover,
.available:hover{
  padding: 2px;
  border: 1px solid #333;
}

.constituent:hover > .inline-cp,
.available:hover > .inline-cp,
.with-inline-cp:hover > .inline-cp{
  visibility: visible;
}

div.sidebyside{
  display: inline;
  margin-right: 20px;
}

.options-field{
}

.options{
  list-style: none;
  display: inline;
  padding: 0px;
  margin: -1px;
  cursor: help;
}

span.option{
  font-style: italic;
  cursor: help;
}

li.option{
  display: inline;
  padding: 0px;
  margin: 0px;
}

.cp-debug{
  display: block;
  font-style: italic;
}

.debug{
  margin: 50px;
  background: #eee;
  overflow: scroll;
}

pre{
}

.detail-table,
.detail-container{
  width: 90%;
  margin-top: 20px;
}

.left-and-right {
	
}

.detail-container-caption {
	font-weight: bold;
	margin-bottom: 20px;
}

.detail-value{
  text-align: left;
}

.detail-hint{
	margin-bottom: 20px;
	padding-left: 20px;
}

.detail-group-start {
  border-top: 1px solid black;
  margin-top: 10px;
  padding-top: 5px;
}

.detail-group-start,
.detail-item-notend {
  margin-bottom: 5px;
}

.detail-group-end{
	margin-bottom: 10px;
}

ol.detail-edit-list,
li.detail-edit-list{
  list-style: none;
  padding: 1em;
  border: 1px solid #ddd;
  min-width: 40%;
}

.fieldset{
  min-width: 90%;
	margin-top: 10px;
	padding-left: 3px;
	padding-right: 3px;
	padding-top: 1px;
  margin-bottom: 50px;
}

.sub-fields{
	margin-top: 5px;
  padding: 20px;
  padding-left: 20px;
	border: 1px solid #ddd;
	background-color: #eee;
	margin-bottom: 20px;
}

.sub-fields>.fieldset{
	padding-bottom: 0px;
	margin-bottom: 0px;
}

.fieldset-caption{
	padding-bottom: 0px;
  border-bottom: 1px solid #ddd;
  margin-bottom: 5px;
}

label, .fieldset-caption, .label, .detail-label{
	color: #333;
  font-weight: bold;
  text-align: left;
}

.trailing-label{
  margin-left: 20px;
}

label, .label{
  padding-right: 5px;
  min-width: 12%;
}

.hint, .description{
  font-style: italic;
  font-size: 80%;
  color: #333;
  margin-left: 5px;
  margin-right: 5px;
  text-decoration: none !important;
  text-align: left;
}

.cert{
  font-family: monospace;
  height: 31em;
  width: 40em;
}

.textarea-label{
  margin-top: 10px;
}

.list-label{
}

.left-col,
.right-col,
.left-half,
.right-half{
  vertical-align: top;
  min-width: 10%;
  display: inline-block;
}

.right-col{
	margin-left: 5%;
}

.left-half,
.right-half{
  vertical-align: top;
  min-width: 40%;
  display: inline-block;
}

.right-half{
  margin-left: 5%;
  width: 40%;
}

.textarea-label{
  display: block;
}

.text-description{
  /*height: 2em; */
  min-width: 80%;
}

.remainder-field{
	min-width: 80em;
}

.listing-text{
  height: 47em;
  width: 90em;
  white-space: nowrap;
  overflow: auto;
}

.listing-panel{
	display: inline-block;
}

.listing-content{
	margin-left: 1%;
}

.hidden{
  display: none;
}

